2003-09-03  Alexander Malysh  <a.malysh@centrium.de>
    * doc/userguide/userguide.xml: spelling fix.
      Thanks again to "Bill Brigden" <bill@baghead.co.uk> for pointing this.
      
2003-09-02  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/shared.c: added SQLite version in version_report_string().

2003-09-02  Alexander Malysh  <a.malysh@centrium.de>
    * doc/userguide/userguide.xml,doc/examples/dlr-*.conf: added required
      'field-source' to the documentation.
      Thanks to "Bill Brigden" <bill@baghead.co.uk> for pointing this.

2003-09-02  Alexander Malysh  <a.malysh@centrium.de>
    * doc/userguide/userguide.xml,gwlib/cfg.def,gw/smsc/smsc_smpp.c:
      applied SMPP inactivity+transaction timeouts patch. For description
      see: Message-Id: <200308202001.50721.a.malysh@centrium.de>

2003-09-02  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/socket.c: fixed a segmentation bug. If setup_official_name()
      did not have a successfull gw_gethostbyname() call, then 
      gw_netaddr_to_octstr4() would cause to cause segmentation fault.
      
2003-09-01  Stipe Tolj  <tolj@wapme-systems.de>
    * configure[.in], config.h.in: added --enable-sqlite switch to enable 
      SQLite support and #defines.
    * gwlib/dbpool[_sqlite].[ch], test/test_dbpool.c: addd SQLite support 
      for database pools.

2003-08-29  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/log.c: fixed bug indroduced by Stipe that no system error 
      strings were shown in the logs.

2003-08-28  Stipe Tolj  <tolj@wapme-systems.de>
    * wap/wsp.h: added WSP_1_x enumeration values to identify which WSP 
      Encoding-Version is used within a session.
    * wap/wsp_headers.[ch]: re-declare wsp_headers_pack() function to add 
      required WSP version.
    * wap/wsp_server_session_machine.def: added INTEGER(encoding_version) to 
      hold the version within the WSPMachine.
    * wap/wsp_server_session_states.def: populates the above 