@@ -1,3 +1,6 @@
+2003-09-04  Stipe Tolj  <tolj@wapme-systems.de>
+    * wap/wsp_[strings.[ch]|session.c]: fixed compiler warnings.
+
 2003-09-03  Alexander Malysh  <a.malysh@centrium.de>
     * doc/userguide/userguide.xml: spelling fix.
       Thanks again to "Bill Brigden" <bill@baghead.co.uk> for pointing this.
